<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>cn</groupId>
  <artifactId>eshop-vivmallv2</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging> 
  <name>eshop-vivmallv2</name>
  <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.2.RELEASE</version>
	</parent>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
			  <groupId>org.apache.tomcat.maven</groupId>
			    <artifactId>tomcat7-maven-plugin</artifactId>
			    <version>2.2</version>
			     <configuration>
	      	   	 <server>103.77.169.245</server>
	        		<url>http://103.77.169.245:8080/manager/text</url>
	        		 <username>admin</username>
	      			  <password>245@tomcat</password>
	       		 <path>/eshop-vivmallv2</path>
	     	 </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-XX:MaxPermSize=128m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<properties>
		<java.version>1.7</java.version>
		<tomcat.version>7.0.82</tomcat.version>
		<start-class>vivmallcn.Application</start-class>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		 <dependency>
		        <groupId>org.springframework.boot</groupId>
		        <artifactId>spring-boot-starter-thymeleaf</artifactId>
		    </dependency>
		  <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
         <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>
		    <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		 <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
        </dependency>   
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>com.nurkiewicz.jdbcrepository</groupId>
			<artifactId>jdbcrepository</artifactId>
			<version>0.4</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-juli</artifactId>
			<version>${tomcat.version}</version>
		</dependency>

		  	<dependency>
		  		<groupId>net.sourceforge.barbecue</groupId>
		  		<artifactId>barbecue</artifactId>
		  		<version>1.5-beta1</version>
		  	</dependency>
		  	<dependency>
		  		<groupId>net.sf.barcode4j</groupId>
		  		<artifactId>barcode4j</artifactId>
		  		<version>2.0</version>
		  	</dependency>
		<dependency>
		   <groupId>net.sourceforge.nekohtml</groupId>
		   <artifactId>nekohtml</artifactId>
		</dependency>
		 <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>6.4.0</version>
        </dependency>   
		<dependency>
		  <groupId>net.sf.jasperreports</groupId> 
		  <artifactId>jasperreports-fonts</artifactId> 
		  <version>6.0.0</version> 
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-bridge -->
		<dependency>
		    <groupId>org.apache.xmlgraphics</groupId>
		    <artifactId>batik-bridge</artifactId>
		    <version>1.8</version>
		</dependency>
		
	<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/xmlgraphics-commons -->
		<dependency>
		    <groupId>org.apache.xmlgraphics</groupId>
		    <artifactId>xmlgraphics-commons</artifactId>
		    <version>2.0</version>
		</dependency>
		<!-- PayPal-->
		<dependency>
			<groupId>com.paypal.sdk</groupId>
			<artifactId>rest-api-sdk</artifactId>
			<version>1.4.2</version>
		</dependency>	
	
		<dependency>
		      <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-mail</artifactId>
   		 </dependency>
   		 <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
		<dependency>
		    <groupId>javax.ws.rs</groupId>
		    <artifactId>javax.ws.rs-api</artifactId>
		    <version>2.0</version>
		</dependency>
		<dependency>
		    <groupId>org.glassfish.jersey.core</groupId>
		    <artifactId>jersey-client</artifactId>
		    <version>2.25.1</version>
		</dependency>
		<dependency>
		    <groupId>org.glassfish.jersey.media</groupId>
		    <artifactId>jersey-media-json-jackson</artifactId>
		    </dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    </dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-annotations</artifactId>
		</dependency>   
		 <!-- JSON Library -->
	       <!-- http://mvnrepository.com/artifact/org.glassfish/javax.json -->
	       <dependency>
	           <groupId>org.glassfish</groupId>
	           <artifactId>javax.json</artifactId>
	           <version>1.0.4</version>
	       </dependency>
			<dependency>
			    <groupId>org.decimal4j</groupId>
			    <artifactId>decimal4j</artifactId>
			    <version>1.0.3</version>
			</dependency>	    		 
	</dependencies>
</project>